@@ -23,6 +23,11 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <sys/time.h>
 #endif
 
+#ifdef OPENBSD
+#include <sys/types.h>
+#include <unistd.h>
+#endif
+
 #include "mouse.h"
 
 #ifndef XWIN
